# D2Template89

./: .gitignore  CMakeLists.txt  D2Template89.dsp  D2Template89.dsw  README.md
src/: CMakeLists.txt  D2Constants.h  D2DataTables.h  D2Dll.c  D2PacketDef.h  D2Patch.h  D2PatchConst.h  D2Ptrs.h  D2StdTypes.h  D2Structs.h  D2Vars.h  DLLmain.cpp  DLLmain.h  DllError.c  d2_constants.h  d2_dll.c  d2_dll.h  d2_functions.c  d2_functions.h  d2_patch_const.c  d2_patch_const.h  d2_ptrs.h  d2_std_types.h  d2_structs.h  d2_variables.c  d2_variables.h  d2_version.h  dll_error.c  dll_error.h  dll_main.c  filew.h  patch.c  patch.h  patch_const.c  patch_const.h  patches.c  patches.h  resource.rc
src/D2Constants/: D2UnitTypes.h
src/D2Structs/: D2LrtbRect.h
src/d2_constants/: CMakeLists.txt  d2_unit_types.h
src/d2_functions/: CMakeLists.txt  d2win_functions.c  d2win_functions.h  fog_functions.c  fog_functions.h
src/d2_functions/d2win_functions/: CMakeLists.txt  d2win_load_mpq.c  d2win_load_mpq.h  d2win_load_mpq_shim.asm
src/d2_functions/fog_functions/: CMakeLists.txt  fog_alloc.c  fog_alloc.h  fog_alloc_client_memory.c  fog_alloc_client_memory.h  fog_free.c  fog_free.h  fog_free_client_memory.c  fog_free_client_memory.h
src/d2_structs/: CMakeLists.txt  d2_lrtb_rect.h  d2_mpq_archive_handle.h
src/d2_variables/: CMakeLists.txt  bnclient_variables.c  bnclient_variables.h  d2client_variables.c  d2client_variables.h
src/d2_variables/bnclient_variables/: CMakeLists.txt  bnclient_gateway_ip_v4_address.c  bnclient_gateway_ip_v4_address.h
src/d2_variables/d2client_variables/: CMakeLists.txt  d2client_is_automap_open.c  d2client_is_automap_open.h
